# routine

./: .env.example  .gitignore  .npmrc  README.md  bunfig.toml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/: offline.html
src-tauri/icons/: .gitkeep  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BadgeDisplay.tsx  ColorPicker.tsx  ContributionGraph.tsx  FloatingPomodoroTimer.tsx  GifPicker.tsx  MentionPicker.tsx  MessageNotification.tsx  Navigation.tsx  PomodoroTimer.tsx  ProjectsManager.tsx  QuoteCard.tsx  StreakDisplay.tsx  TasksManager.tsx
src/components/ui/: scroll-area.tsx
src/contexts/: PomodoroContext.tsx
src/hooks/: useAdmin.tsx
src/integrations/supabase/: types.ts
src/pages/: Admin.tsx  Analytics.tsx  Auth.tsx  Calendar.tsx  Challenges.tsx  Chat.tsx  Dashboard.tsx  Documentation.tsx  ForgotPassword.tsx  Friends.tsx  Goals.tsx  Groups.tsx  Habits.tsx  Index.tsx  Leaderboard.tsx  Notifications.tsx  Profile.tsx  Projects.tsx  ResetPassword.tsx  Settings.tsx
src/utils/: colorMixer.ts  encryption.ts  tauri.ts  validation.ts
supabase/: config.toml
supabase/functions/delete-user/: README.md  index.ts
supabase/functions/send-daily-emails/: README.md  index.ts
